--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
+@font-face {
+  font-family: 'digitalFont';
+  src: url('./fonts/Digital.ttf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: fallback;
+}
+
+@font-face {
+  font-family: 'numericFont';
+  src: url('./fonts/Freshman.ttf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: fallback;
+}
+
+:root {
+  --cellWidth: 40px;
+  --lightgray: #d9d9d9;
+  --gray: #6c757d;
+  --transperentGray: rgba(108, 117, 125, 0.5);
+  --dark: #343a40;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  min-width: fit-content;
+
+  margin: 0;
+  font-size: 1em;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  color: var(--dark);
+}
+
+a {
+  text-decoration: none;
+}
+
+.globalEventWrapper {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.globalEventWrapper > * {
+  margin-left: auto;
+  margin-right: auto;
 }
